Fix: z-index 값 추가를 통해 겹침 문제 해결

--- a/week1/hw1/style.css
+++ b/week1/hw1/style.css
@@ -15,6 +15,7 @@ header {
     display: flex;
     justify-content: space-between;
     position: fixed;
+    z-index: 1;
     top: 0;
     width: 100%;
     height: 2.5rem;
